# cuda-sift-vr-stitcher

./: CMakeLists.txt  README.md
docs/: .gitkeep
include/: .gitkeep  camera.h  camera_manager.h  config.h  gaussian.h  gaussian_kernel.cuh  gaussian_pyramid.cuh  gaussian_test.h  memory_manager.h  memory_test.h  pyramid.h  test_kernel.h
results/: .gitkeep
src/: gaussian.cu  gaussian_kernel.cu  main.cu  memory_manager.cu  test_kernel.cu
src/gpu/: CMakeLists.txt  Makefile  cuda_kernels.cu  cuda_kernels.cuh  gaussian_pyramid.cu  image_utils.cu  image_utils.cuh  main.cu  test_gradient.cu
src/pyramid/: gaussian.cu
src/tests/: gaussian_test.cpp  memory_test.cpp
